force-app/main/default/objects/Time_Record_Period_Staff_Member__c/Time_Record_Period_Staff_Member__c.object-meta.xml
<CustomObject>
    <label>Time Record Period Staff Member</label>
    <nameField>
        <displayFormat>TRPSM-{00000000}</displayFormat>
        <label>Time Record Period Staff Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Record Period Staff Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>