force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Record Period Staff Members</relationshipLabel>
    <relationshipName>Time_Record_Period_Staff_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>