force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>User__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>