force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Month_Name_Start__c.field-meta.xml
<CustomField>
    <fullName>Month_Name_Start__c</fullName>
    <description>Month Name Based on the Start Date of the Time Record Period</description>
    <formula>CASE(MONTH(Time_Record_Period__r.Start_Date__c ), 1, &quot;01. Jan&quot;,2, &quot;02. Feb&quot;,
3, &quot;03. Mar&quot;,
4, &quot;04. Apr&quot;,
5, &quot;05. May&quot;,
6, &quot;06. Jun&quot;,
7, &quot;07. Jul&quot;,
8, &quot;08. Aug&quot;,
9, &quot;09. Sep&quot;,
10, &quot;10. Oct&quot;,
11, &quot;11. Nov&quot;,
12, &quot;12. Dec&quot;, &quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Name Start</label>
    <type>Text</type>
</CustomField>