force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Staff member&apos;s office at time of creation</description>
    <label>Office</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>