force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Time_Record_Period__c.field-meta.xml
<CustomField>
    <fullName>Time_Record_Period__c</fullName>
    <description>Related time record period record</description>
    <label>Time Record Period</label>
    <referenceTo>Time_Record_Period__c</referenceTo>
    <relationshipLabel>Time Record Period Staff Members</relationshipLabel>
    <relationshipName>Time_Record_Period_Staff_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>