force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Staff Member&apos;s Title at time of Creation</description>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>