force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Total_Hours_FR__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_FR__c</fullName>
    <description>Total Hours for the Time Period for FR (Weekday + Weekend)</description>
    <label>Total Hours FR</label>
    <summarizedField>Time_Record_Rollup_Week__c.Total_Hours_Worked__c</summarizedField>
    <summaryForeignKey>Time_Record_Rollup_Week__c.Time_Record_Period_Staff_Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>