force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Total_Hours_Litigation__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Litigation__c</fullName>
    <description>Total hours recorded for the period</description>
    <label>Total Hours Litigation</label>
    <summarizedField>Time_Record__c.Hours_Worked__c</summarizedField>
    <summaryForeignKey>Time_Record__c.Time_Record_Period_Staff_Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>