force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Total_Hours_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Tuesday__c</fullName>
    <description>Total Hours Tuesday</description>
    <label>Total Hours Tuesday</label>
    <summarizedField>Time_Record__c.Hours_Worked__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Record__c.Day_Of_Week__c</field>
        <operation>equals</operation>
        <value>2</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Record__c.Time_Record_Period_Staff_Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>