force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Total_Hours_Weekday_FR__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Weekday_FR__c</fullName>
    <description>Total weekday hours for the period</description>
    <label>Total Hours Weekday FR</label>
    <summarizedField>Time_Record_Rollup_Week__c.Hours_Worked_Weekday__c</summarizedField>
    <summaryForeignKey>Time_Record_Rollup_Week__c.Time_Record_Period_Staff_Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>