force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/Total_Hours_Weekend_FR__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Weekend_FR__c</fullName>
    <description>Total Weekend Hours for the Time Period for FR</description>
    <label>Total Hours Weekend FR</label>
    <summarizedField>Time_Record_Rollup_Week__c.Hours_Worked_Weekend__c</summarizedField>
    <summaryForeignKey>Time_Record_Rollup_Week__c.Time_Record_Period_Staff_Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>