force-app/main/default/objects/Time_Record_Period_Staff_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related user record</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Record_Period_Staff_Members</relationshipName>
    <type>Lookup</type>
</CustomField>