force-app/main/default/objects/Time_Record_Period_Staff_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Time_Record_Period__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <columns>Title__c</columns>
    <columns>User__c</columns>
    <columns>Month_Name_End__c</columns>
    <columns>Month_Name_Start__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>